recursion.cons.nlast.Nlast.scala.error
Erreur de compilation :
Nlast:7: error: value lenth is not a member of List[Int]
  if(l.lenth<=n){
       ^